--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,14 @@
   <head>
     <title>React App</title>
     <script src="/main.js" defer></script>
-    <link href="/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
+    <p id="location">location there</p>
+    <div id="map"></div>
+    <div id="events"></div>
+    <script src="https://maps.googleapis.com/maps/api/js" async defer></script>
   </body>
 </html>
