--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,18 @@
 <html>
   <head>
     <title>React App</title>
-    <script src="/main.js" defer></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <script src="/main.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
