--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>React App</title>
+        <title>Live Music Mapper</title>
+        <link href="favicon.png" rel="icon" type="image/png" />
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
